--- a/Ejercicio_sobre_algoritmo.ipynb
+++ b/Ejercicio_sobre_algoritmo.ipynb
@@ -5,7 +5,7 @@
    "id": "f82585a5-27c2-4673-a73e-bdc968de98e3",
    "metadata": {},
    "source": [
-    "# Ejercicios Sobre Aloritmos"
+    "# Ejercicios Sobre Algoritmos"
    ]
   },
   {
@@ -80,7 +80,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 21,
    "id": "0dfed39d-65ee-4455-bccb-ebf5bd24ee12",
    "metadata": {
     "scrolled": true
@@ -92,7 +92,7 @@
        "[-3, -1, 0, 4, 7]"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 21,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -103,7 +103,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 22,
    "id": "6feef470-cfd1-4cf7-a519-7a3db1158da4",
    "metadata": {},
    "outputs": [
@@ -113,7 +113,7 @@
        "[2, 2, 4, 4, 5, 8]"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 22,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -132,7 +132,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 23,
    "id": "e02b2504-2f67-45ed-a253-39a0a1e5ee2b",
    "metadata": {},
    "outputs": [],
